特色：通过新指令和支付集成来优化游戏流程和玩家管理